<resources>
    <string name="app_name">GarbageCollector</string>
    <string name="fab">fab</string>
    <string name="ranking">Ranking</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="post">Post</string>
    <string name="copy">copy</string>
    <string name="claim">Claim</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="share_activity">Share my activity</string>
    <string name="cancel">Cancel</string>
    <string name="network_issues">Network issues</string>
    <string name="network_issues_message1">Please, check your network</string>
    <string name="network_issues_message2">connection and try again!</string>
    <string name="sign_out_message1">Are you sure to sign out of your</string>
    <string name="sign_out_message2">account?</string>
    <string name="success_message1">Garbage location is successfully</string>
    <string name="success_message2">submitted!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_title">Don’t have an account? Sign Up</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="try_again">Try again</string>
    <string name="new_locations">New locations are available!</string>
    <string name="reload">Reload</string>
    <string name="full_name">Full name</string>
    <string-array name="uzbekistan_cities">
        <item>Tashkent</item>
        <item>Samarkand</item>
        <item>Bukhara</item>
        <item>Khiva</item>
        <item>Andijan</item>
        <item>Nukus</item>
        <item>Navoi</item>
        <item>Fergana</item>
        <item>Urgench</item>
        <item>Termez</item>
        <item>Qarshi</item>
        <item>Chirchiq</item>
        <item>Namangan</item>
        <item>Shahrisabz</item>
        <item>Kokand</item>
        <item>Angren</item>
        <item>Qo‘qon</item>
        <item>Guliston</item>
        <item>Zarafshan</item>
        <item>Turkestan</item>
    </string-array>

    <string-array name="tashkent_districts">
        <item>Almazar</item>
        <item>Bektemir</item>
        <item>Chilanzar</item>
        <item>Mirzo-Ulugbek</item>
        <item>Sergeli</item>
        <item>Shaykhontohur</item>
        <item>Yakkasaray</item>
        <item>Yashnabad</item>
        <item>Yunusabad</item>
    </string-array>
</resources>